[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/classes/colonyRooms/HatchingRoom.gd" type="Script" id=1]

[node name="HatchingRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 192.0
margin_bottom = 64.0
color = Color( 0.0823529, 0.0901961, 0.203922, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 21600.0
one_shot = true

[node name="Button" type="Button" parent="."]
margin_right = 192.0
margin_bottom = 64.0

[node name="price1" type="ColorRect" parent="."]
visible = false
margin_left = 151.0
margin_top = 16.0
margin_right = 183.0
margin_bottom = 48.0
color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="type" type="Label" parent="price1"]
margin_right = 32.0
margin_bottom = 16.0

[node name="amt" type="Label" parent="price1"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0

[node name="price2" type="ColorRect" parent="."]
visible = false
margin_left = 111.0
margin_top = 16.0
margin_right = 143.0
margin_bottom = 48.0
color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="type" type="Label" parent="price2"]
margin_right = 32.0
margin_bottom = 16.0

[node name="amt" type="Label" parent="price2"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0

[node name="price3" type="ColorRect" parent="."]
visible = false
margin_left = 71.0
margin_top = 16.0
margin_right = 103.0
margin_bottom = 48.0
color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="type" type="Label" parent="price3"]
margin_right = 32.0
margin_bottom = 16.0

[node name="amt" type="Label" parent="price3"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
